--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="es.iesnervion.fjruiz.mov_07_notificaciones">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,15 +19,14 @@
         <activity android:name=".ResultActivity" />
 
         <service
-            android:name=".GetToken"
+            android:name=".notificacion.GetToken"
             android:enabled="true"
             android:exported="true"/>
         <service
-            android:name=".FirebaseNotification">
+            android:name=".notificacion.FirebaseNotification">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
-
 </manifest>
